5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1643_2711.log
== TEST (2019-04-13 12:31:09) 
-- CODE:
valortotal = float(input("escreva o valor total que ele possui: "))
qtdtickets = int(input("escreva a quantidade de tickets do RU que ele necessita: "))
valorticket = float(input("escreva o valor dos tickets: "))
qtdpasses = int(input("escreva a quantidade de passes que ele necessita: "))
valorpasse = float(input("escreva o valor do passe: "))
a = qtdtickets * valorticket
b = qtdpasses * valorpasse
if (valortotal > = a + b):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if (valortotal > = a + b):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:31:23) 
-- CODE:
valortotal = float(input("escreva o valor total que ele possui: "))
qtdtickets = int(input("escreva a quantidade de tickets do RU que ele necessita: "))
valorticket = float(input("escreva o valor dos tickets: "))
qtdpasses = int(input("escreva a quantidade de passes que ele necessita: "))
valorpasse = float(input("escreva o valor do passe: "))
a = qtdtickets * valorticket
b = qtdpasses * valorpasse
if (valortotal > == a + b):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if (valortotal > == a + b):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:31:44) 
-- CODE:
valortotal = float(input("escreva o valor total que ele possui: "))
qtdtickets = int(input("escreva a quantidade de tickets do RU que ele necessita: "))
valorticket = float(input("escreva o valor dos tickets: "))
qtdpasses = int(input("escreva a quantidade de passes que ele necessita: "))
valorpasse = float(input("escreva o valor do passe: "))
a = qtdtickets * valorticket
b = qtdpasses * valorpasse
if (valortotal >= a + b):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:32:21) 
-- CODE:
valortotal = float(input("escreva o valor total que ele possui: "))
qtdtickets = int(input("escreva a quantidade de tickets do RU que ele necessita: "))
valorticket = float(input("escreva o valor dos tickets: "))
qtdpasses = int(input("escreva a quantidade de passes que ele necessita: "))
valorpasse = float(input("escreva o valor do passe: "))
a = qtdtickets * valorticket
b = qtdpasses * valorpasse
if (valortotal >= a + b):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- EXECUTION TIME:
0.148635
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
